Added missing operations, refactored, Added tests